deploy/kustomize/overlays/local/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms
---
apiVersion: v1
kind: Namespace
metadata:
  name: website
---
apiVersion: v1
kind: Namespace
metadata:
  name: golf
